kubernetes/ValidatingWebhookConfiguration.yml

apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: denyenv
webHooks:
  - name: denyenv.example.com
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    failurePolicy: Fail
    clientConfig:
      # url: "${HTTPS_TRIGGER_URL}"
      service:
        namespace: 
        name: 
      # `caBundle` is a PEM encoded CA bundle which will be used to validate
      # the webhook's server certificate.
      # Required.
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lKQUpYeDFLc0FlOGRNTUEwR0NTcUdTSWIzRFFFQkN3VUFNQkl4RURBT0JnTlYKQkFNTUIzUmxjM1F0WTJFd0hoY05NVGd3TnpFeE1USXpNak0yV2hjTk1UZ3dPVEE1TVRJek1qTTJXakFiTVJrdwpGd1lEVlFRRERCQjBaWE4wTG1WNFlXMXdiR1V1WTI5dE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBCk1JSUJDZ0tDQVFFQXJQYWZwaWR5Qnh2NzJTWGZiK0ErV3d1aWtUMkhMZHdNZitBZHo5V2VuV2JtdWdsSXVscG4KWi9NOEZKOU5qcnpOemNWd1pOa3lmYno0Q2dOTDRWWVdhWDVyQlcwOHhjZkp5T29KcXhjc0ZTalZxd2RXOVlEYgo1a3NRTEZXM0Jr [...]
